# cortile-addons

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: release.yml
cortile/: __init__.py  cortile.py
cortile/base/: connector.py  process.py  session.py
cortile/helper/: dict.py  logger.py  signal.py  time.py
examples/: apply_layout_and_disable.py  apply_layout_with_keybindings.py  make_app_always_master.py  move_app_to_desktop.py  move_app_to_screen.py  move_app_to_workspace.py  open_gui_with_clients.py  swap_apps_using_pointer.py  toggle_layout_with_keybindings.py  use_hotcorners_without_tiling.py  write_tiling_state_file.py
